Closed Bug 1220043 Opened 9 years ago Closed 9 years ago

Building WebrtcGlobalInformation.cpp causes C1001 error on VS2015 x64

Categories

(Core :: WebRTC: Signaling, defect, P3)

x86_64
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
firefox45 --- fixed

People

(Reporter: m_kato, Assigned: m_kato)

Details

Attachments

(1 file)

When building WebrtcGlobalInformation.cpp, I meet the folowing internal compiler error.



c:\Development\hg.mozilla.org\objdir-win64\dist\include\mozilla/Tuple.h(56): fatal error C1001: An internal error has occurred in the compiler.
(compiler file 'msc1.cpp', line 1393)
 To work around this problem, try simplifying or changing the program near the locations listed above.
Please choose the Technical Support command on the Visual C++
 Help menu, or open the Technical Support help file for more information
c:\Development\hg.mozilla.org\objdir-win64\dist\include\mozilla/Tuple.h(64): note: see reference to class template instantiation 'mozilla::detail::CheckConvertibilityImpl<mozilla::detail::Group<OtherHeadT>,mozilla::detail::Group<HeadT>,true
>' being compiled
        with
        [
            OtherHeadT=mozilla::detail::TupleImpl<0x01,bool> &,
            HeadT=bool
        ]
c:\Development\hg.mozilla.org\objdir-win64\dist\include\mozilla/Tuple.h(187): note: see reference to class template instantiation 'mozilla::detail::CheckConvertibility<mozilla::detail::Group<OtherHeadT>,mozilla::detail::Group<HeadT>>' being
 compiled
        with
        [
            OtherHeadT=mozilla::detail::TupleImpl<0x01,bool> &,
            HeadT=bool
        ]
c:\Development\hg.mozilla.org\objdir-win64\dist\include\mozilla/Tuple.h(257): note: see reference to class template instantiation 'mozilla::detail::TupleImpl<0x00,A,B>' being compiled
        with
        [
            A=nsAutoPtr<mozilla::RTCStatsQuery>,
            B=bool
        ]
c:\Development\hg.mozilla.org\mozilla-win64\media\mtransport\runnable_utils.h(124): note: see reference to class template instantiation 'mozilla::Tuple<nsAutoPtr<mozilla::RTCStatsQuery>,bool>' being compiled
c:/Development/hg.mozilla.org/mozilla-win64/media/webrtc/signaling/src/peerconnection/WebrtcGlobalInformation.cpp(1131): note: see reference to class template instantiation 'mozilla::runnable_args_func<void (__cdecl *)(nsAutoPtr<mozilla::RTCStatsQuery>,bool),nsAutoPtr<mozilla::RTCStatsQuery>,bool>' being compiled
Internal Compiler Error in c:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\BIN\amd64\cl.exe.  You will be prompted to send an error report to Microsoft later.
INTERNAL COMPILER ERROR in 'c:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\BIN\amd64\cl.exe'
    Please choose the Technical Support command on the Visual C++
    Help menu, or open the Technical Support help file for more information
c:/Development/hg.mozilla.org/mozilla-win64/config/rules.mk:958: recipe for target 'WebrtcGlobalInformation.obj' failed
Comment on attachment 8681079 [details] [diff] [review]
Add workaround for internal complier error by VS2015

Add workaround for VS2015 x64
Attachment #8681079 - Flags: review?(rjesup)
Attachment #8681079 - Flags: review?(rjesup) → review+
backlog: --- → webrtc/webaudio+
Rank: 35
Priority: -- → P3
https://hg.mozilla.org/mozilla-central/rev/f044760cf8ab
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
removing the b2g 2.5 flag since this commit has been reverted due to an incorrect merge, sorry for the confusion
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: