Bug 1220043 - Add workaround for internal complier error by VS2015. r=rjesup