media/webrtc/signaling/src/peerconnection/WebrtcGlobalInformation.cpp
@@ -1066,7 +1066,7 @@ static void StoreLongTermICEStatisticsImpl_m(
 
 static void GetStatsForLongTermStorage_s(
     nsAutoPtr<RTCStatsQuery> query,
-    bool aIsLoop) {
+    const bool aIsLoop) {
 
   MOZ_ASSERT(query);
 
